# foundry-experiment

./: .env.example  .gitignore  AGENTS.md  README.md  TASK.md  pyproject.toml  requirements.txt
api/: Dockerfile  main.py
api/app/: config.py  models.py
api/app/analyzers/: drawing-architecture-v1.json
api/app/pipeline/: evaluate_rules.py  extract_facts.py  orchestrator.py  render_report.py  retrieve_knowledge.py
infra/: main.bicep  main.bicepparam.example
infra/modules/: container-app.bicep  static-web-app.bicep  storage.bicep
rules/packs/: ncc-accessibility-v1.yaml
rules/schema/: rule-pack.schema.json
samples/ncc/: README.md  accessibility-circulation.md
scripts/: run_local.py  seed_knowledge.py  serve_web.py
tests/: conftest.py  test_evaluate_rules.py  test_render_report.py
tests/fixtures/: expected_report.json  sample_facts.json
web/: index.html  package.json  staticwebapp.config.json
web/src/: app.js  styles.css
