[project]
name = "foundry-experiment"
version = "0.1.0"
description = "Deterministic NCC architectural drawing compliance checking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["api"]
